--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.11.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
